tests/typing/bad/testfile-return-3.scala

class C { val x = return }
object Main { def main(args: Array[String]) { } }
